--- a/growandshine.css
+++ b/growandshine.css
@@ -222,3 +222,122 @@ header{
         }
     }
 }
+
+.section-4{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    gap: 25px; 
+    padding: 20px 200px;
+    padding-bottom: 55px;
+
+    & .box-51{
+        font-size: 25px;
+    }
+
+    & .box-52{
+            padding-top: 20px;
+        & a{
+            text-decoration: none;
+
+            &:hover{
+                text-decoration: underline;
+            }
+        }
+    }
+    
+    & .box-53{
+
+        & i{
+            font-family: "Poppins", sans-serif;
+            font-weight: 600;
+            font-style: italic;
+
+        }
+    }
+}
+
+.section-5{
+    background-color: rgb(104, 56, 188);
+    margin-bottom: 4px;
+    
+
+    & .purple2{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        gap: 20px;
+        padding: 20px 130px;
+        color: white;
+
+        & .box-61{
+            font-size: 19px;
+        }
+    }
+}
+
+.footer{
+        margin-left: 170px;
+        padding-bottom: 60px;
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+
+    & .parent2{
+        display: flex;
+        justify-content: space-around;
+        flex-direction: row;
+        padding: 60px 0px;
+        padding-bottom: 0px;
+        width: 50%;
+        gap: 25px;
+
+        & .box-71{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            gap: 40px;
+
+            & .box-711{
+                border: 1px solid black;
+                padding: 18px 15px;
+                padding-left: 27px;
+                width: 230px;
+            }
+
+            & .box-712{
+                border: 1px solid black;
+                padding: 18px 15px;
+                background-color: rgb(48, 46, 46);
+                padding-left: 27px;
+                width: 230px;
+
+                & a{
+                    color: white;
+                    text-decoration: none;
+                    font-weight: 600;
+                }
+            }
+        }
+
+        & .box-72{
+            
+            & .box-721{
+                font-weight: 600;
+                margin-bottom: 15px;
+                line-height: 30px;
+            }
+            & .box-722{
+                margin-bottom: 15px;
+                text-align: start;
+                font-size: 15px;
+                line-height: 30px;
+            }
+            & .box-723{
+                font-size: 15px;
+            }
+        }
+    }
+
+    
+}
